5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1593_1804.log
== TEST (2019-03-30 01:09:44) 
-- CODE:
xa = float(input("Digite a coordenada xa:"))
ya = float(input("Digite a coordenada ya:"))
xb = float(input("Digite a coordenada xb:"))
yb = float(input("Digite a coordenada yb:"))
from math import *
dAb = sqrt((xb-xa)**2+(yb-ya)**2)
print (round(dAB,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(dAB,3))
NameError: name 'dAB' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 01:10:32) 
-- CODE:
xa = float(input("Digite a coordenada xa:"))
ya = float(input("Digite a coordenada ya:"))
xb = float(input("Digite a coordenada xb:"))
yb = float(input("Digite a coordenada yb:"))
from math import *
dAB = sqrt((xb-xa)**2+(yb-ya)**2)
print (round(dAB,3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 01:10:45) 
-- CODE:
xa = float(input("Digite a coordenada xa:"))
ya = float(input("Digite a coordenada ya:"))
xb = float(input("Digite a coordenada xb:"))
yb = float(input("Digite a coordenada yb:"))
from math import *
dAB = sqrt((xb-xa)**2+(yb-ya)**2)
print (round(dAB,3))
-- EXECUTION TIME:
0.128193
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
